force-app/main/default/objects/cdcpc__RD_TBL_BurstTolMethods__c/cdcpc__RD_TBL_BurstTolMethods__c.object-meta.xml
<CustomObject>
    <label>RD TBL BurstTolMethods</label>
    <nameField>
        <label>RD TBL BurstTolMethods</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD TBL BurstTolMethods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>