force-app/main/default/objects/cdcpc__RD_TBL_BurstTolMethods__c/fields/cdcpc__MaxAdd__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MaxAdd__c</fullName>
    <label>MaxAdd</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>